# apexive_test

./: .gitignore  README.md  manage.py  pyproject.toml
apexiveproject/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: models.py  serializers.py  urls.py  views.py
myapp/tests/: test_published_after_book_list.py  tests_author_api.py  tests_author_with_multiple_books.py  tests_book_api.py
